Update, categorized search
You can now search by post or by subreddit.
Click on subreddit labels in posts to directly search for posts in that
subreddit.

Infinite scroll applies to subreddit search results.

--- a/styles/main.css
+++ b/styles/main.css
@@ -359,3 +359,11 @@ h6.small {
 	padding: 10px;
 	padding-left: 0px;
 }
+
+input[type=radio] {
+	margin-top: 5px;
+	margin-left: 10px;
+}
+label {
+	color: #17bb2c;
+}
