--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 html, body, #container {
-    height: 100%;
+    height: 100.1%;
     width: 100%;
 	font-size: 100%;
 	background:#FFF;
@@ -75,7 +75,7 @@ h6.small {
 #post-list-container,
 #post-container {
 	height:100%;
-	overflow-y:scroll;
+	overflow: scroll;
 }
 
 #sidebar,
@@ -180,13 +180,13 @@ h6.small {
 	background: #fafafa;
 }
 #post-list li .gutter {gutter
-	width:60px;
-	float:left;
+	width: 60px;
+	float: left;
 }
 #post-list li .gutter .score {
 	color: #17822C;
-	text-align:center;
-	font-weight:bold;
+	text-align: center;
+	font-weight: bold;
 	font-size: 1.1em;
 }
 #post-list li .gutter img {
@@ -324,11 +324,11 @@ h6.small {
 }
 
 .share-btn:active {
-  position: relative;
-  top: 2px;
-  box-shadow: none;
-  color: #e2e2e2;
-  outline: none;
+	position: relative;
+	top: 2px;
+	box-shadow: none;
+	color: #e2e2e2;
+	outline: none;
 }
 
 .share-btn.twitter     { background: #55acee; }
